refactor: 공백 검증 코드 수정
- .trim().isEmpty() 코드를 isBlank() 함수를 활용하도록 수정