@@ -12,7 +12,7 @@ public class Car {
     }
 
     private void validateName(String name) {
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("자동차 이름은 비어있을 수 없습니다.");
         }
         if (name.length() > MAX_NAME_LENGTH) {
